# auto-export

./: CHANGELOG.md  README.md  auto-export.cabal  cabal.project
.github/workflows/: ci.yml
play/: Main.hs
src/: AutoExport.hs
src/AutoExport/: GhcFacade.hs
test/: Main.hs
test-modules/: Class1.hs.expected  Class1.hs.input  Data1.hs.expected  Data1.hs.input  Data2.hs.expected  Data2.hs.input  Data3.hs.expected  Data3.hs.input  Data4.hs.expected  Data4.hs.input  KindSig1.hs.expected  KindSig1.hs.input  Pat1.hs.expected  Pat1.hs.input  Pat2.hs.expected  Pat2.hs.input  Ty1.hs.expected  Ty1.hs.input  Ty2.hs.expected  Ty2.hs.input  Ty3.hs.expected  Ty3.hs.input  Ty4.hs.expected  Ty4.hs.input  Ty5.hs.expected  Ty5.hs.input  Ty6.hs.expected  Ty6.hs.input  Var1.hs.expected  Var1.hs.input  Var2.hs.expected  Var2.hs.input  Var3.hs.expected  Var3.hs.input  Var4.hs.expected  Var4.hs.input  Var5.hs.expected  Var5.hs.input  Var6.hs.expected  Var6.hs.input  (+1 more)
