cabal-version:      3.0
name:               auto-export
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md
tested-with: GHC == 9.12.1, GHC == 9.10.1, GHC == 9.8.1, GHC == 9.6.1

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AutoExport
                      AutoExport.GhcFacade
    -- other-modules:
    default-extensions: LambdaCase
    build-depends:    base,
                      ghc >= 9.6 && < 9.13,
                      bytestring < 0.13,
                      mtl,
                      ghc-exactprint,
                      ghc-paths,
                      containers
    hs-source-dirs:   src
    default-language: GHC2021

test-suite auto-export-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base <5,
        process,
        directory,
        tasty,
        tasty-hunit,
        ghc
