cabal-version:      3.0
name:               test-modules
version:            0.1.0.0
extra-source-files:
  *.input
  *.expected

common attrs
    ghc-options: -fplugin AutoExport
    build-depends:    base,
                      auto-export
    hs-source-dirs:   .
    default-language: GHC2021
    default-extensions: LambdaCase

executable Class1
    import: attrs
    main-is: Class1.hs

executable Data1
    import: attrs
    main-is: Data1.hs

executable Data2
    import: attrs
    main-is: Data2.hs

executable Data3
    import: attrs
    main-is: Data3.hs

executable Data4
    import: attrs
    main-is: Data4.hs

executable KindSig1
    import: attrs
    main-is: KindSig1.hs

executable Pat1
    import: attrs
    main-is: Pat1.hs

executable Pat2
    import: attrs
    main-is: Pat2.hs

executable Ty1
    import: attrs
    main-is: Ty1.hs

executable Ty2
    import: attrs
    main-is: Ty2.hs

executable Ty3
    import: attrs
    main-is: Ty3.hs

executable Ty4
    import: attrs
    main-is: Ty4.hs

executable Ty5
    import: attrs
    main-is: Ty5.hs

executable Ty6
    import: attrs
    main-is: Ty6.hs

executable Var1
    import: attrs
    main-is: Var1.hs

executable Var2
    import: attrs
    main-is: Var2.hs

executable Var3
    import: attrs
    main-is: Var3.hs

executable Var4
    import: attrs
    main-is: Var4.hs

executable Var5
    import: attrs
    main-is: Var5.hs
